RESOLVED FIXED145865
[iOS] Tahoma isn't installed on iOS, so there is no need to blacklist it
https://bugs.webkit.org/show_bug.cgi?id=145865
Summary [iOS] Tahoma isn't installed on iOS, so there is no need to blacklist it
Myles C. Maxfield
Reported 2015-06-10 19:33:11 PDT
[iOS] Tahoma isn't installed on iOS, so there is no need to blacklist it
Attachments
Patch (2.01 KB, patch)
2015-06-10 19:38 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2015-06-10 19:38:15 PDT
WebKit Commit Bot
Comment 2 2015-06-11 00:00:51 PDT
Comment on attachment 254700 [details] Patch Clearing flags on attachment: 254700 Committed r185450: <http://trac.webkit.org/changeset/185450>
WebKit Commit Bot
Comment 3 2015-06-11 00:00:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.