[iOS] Tahoma isn't installed on iOS, so there is no need to blacklist it https://bugs.webkit.org/show_bug.cgi?id=145865

Reviewed by Dan Bernstein.

No new tests because I can't copy Tahoma into our open source repository.

* platform/graphics/cocoa/FontCocoa.mm:
(WebCore::fontFamilyShouldNotBeUsedForArabic):


Canonical link: https://commits.webkit.org/163919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185450 268f45cc-cd09-0410-ab3c-d52691b4dbfc